<resources>
    <string name="app_name">Subscription</string>


    <!--Exception messages-->
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>

    <!--Add Subscription-->
    <string name="txt_add_subscription">Add Subscription</string>
    <string name="txt_popular">Popular</string>
    <string name="txt_all">All</string>
    <string name="txt_create_custom_subscription">Create custom subscription</string>
    <string name="number_format_text">%1$,.2f</string>
    <string name="number_format_text_with_currency">%1$s %2$,.2f</string>
    <string name="version_string">Version %1$s</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="cycle">Cycle</string>
    <string name="first_bill">First Bill</string>
    <string name="duration">Duration</string>
    <string name="reminder">Reminder</string>
    <string name="currency">Currency</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="subscription_logo">Subscription Logo</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="user_photo">User Photo</string>
    <string name="go_pro_to_unlock_more">Go Pro to unlock more</string>
    <string name="subscription_count">Subscription Count</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="weekly_breakdown">Weekly Breakdown</string>
    <string name="monthly_breakdown">Monthly Breakdown</string>
    <string name="annual_breakdown">Annual Breakdown</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="total">Total</string>
    <string name="sign_out">Sign Out</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="share">Share</string>
    <string name="send_feedback">Send feedback</string>
    <string name="developed_by">DEVELOPED BY</string>
    <string name="details">Details</string>
    <string name="update_subscription">Update Subscription</string>
    <string name="update">Update</string>

    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
</resources>
