<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.screens.add_subscription.AddSubscriptionActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="4dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/fragment_create_subscription_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/product_sans_bold"
                android:gravity="center_vertical"
                android:text="@string/my_subscriptions"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toStartOf="@id/searchView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/fragment_create_subscription_add"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="0dp"
                android:layout_marginRight="16dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/add_subscription"
                android:src="@drawable/ic_plus_accent"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@id/fragment_create_subscription_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/fragment_create_subscription_title"
                tools:ignore="RtlSymmetry"
                tools:targetApi="lollipop" />
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_create_subscription_card_view"
        style="@style/CreateSubForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorDefault"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/fragment_create_subscription_icon"
                android:layout_width="109dp"
                android:layout_height="96dp"
                android:layout_margin="32dp"
                android:contentDescription="@string/subscription_logo"
                android:padding="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/colorPrimary" />

            <com.riteshakya.subs.views.component.MaskEditText
                android:id="@+id/fragment_create_subscription_amount"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="200dp"
                app:hint="Amount"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_create_subscription_icon"
                app:maskText="$" />

            <TextView
                android:id="@+id/fragment_create_subscription_last_billed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@android:color/white"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_create_subscription_amount"
                app:layout_constraintVertical_bias="0.0"
                tools:background="@color/cardview_dark_background"
                tools:text="Billed 34 August 2017" />

            <Button
                android:id="@+id/fragment_create_subscription_delete"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                android:textColor="@android:color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:targetApi="lollipop" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@id/fragment_create_subscription_delete"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_create_subscription_last_billed"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <LinearLayout style="@style/CreateSubForm.Row">

                        <TextView
                            style="@style/CreateSubForm.Row.Label"
                            android:text="@string/name" />

                        <EditText
                            android:id="@+id/fragment_create_subscription_name"
                            style="@style/CreateSubForm.Row.EditText"
                            android:hint="@string/enter_name"
                            tools:text="XBox Live" />
                    </LinearLayout>

                    <LinearLayout style="@style/CreateSubForm.Row">

                        <TextView
                            style="@style/CreateSubForm.Row.Label"
                            android:text="@string/description" />

                        <EditText
                            android:id="@+id/fragment_create_subscription_description"
                            style="@style/CreateSubForm.Row.EditText"
                            android:hint="@string/enter_description"
                            tools:text="Online Gaming" />
                    </LinearLayout>

                    <LinearLayout style="@style/CreateSubForm.Row">

                        <TextView
                            style="@style/CreateSubForm.Row.Label"
                            android:text="@string/cycle" />

                        <com.riteshakya.subs.views.component.CustomSpinnerView
                            android:id="@+id/fragment_create_subscription_cycle"
                            style="@style/CreateSubForm.Row.EditText" />
                    </LinearLayout>

                    <LinearLayout style="@style/CreateSubForm.Row">

                        <TextView
                            style="@style/CreateSubForm.Row.Label"
                            android:text="@string/first_bill" />

                        <com.riteshakya.subs.views.component.CustomDateView
                            android:id="@+id/fragment_create_subscription_first_bill"
                            style="@style/CreateSubForm.Row.EditText" />
                    </LinearLayout>

                    <LinearLayout style="@style/CreateSubForm.Row">

                        <TextView
                            style="@style/CreateSubForm.Row.Label"
                            android:text="@string/duration" />

                        <com.riteshakya.subs.views.component.CustomSpinnerView
                            android:id="@+id/fragment_create_subscription_duration"
                            style="@style/CreateSubForm.Row.EditText" />
                    </LinearLayout>

                    <LinearLayout style="@style/CreateSubForm.Row">

                        <TextView
                            style="@style/CreateSubForm.Row.Label"
                            android:text="@string/reminder" />

                        <com.riteshakya.subs.views.component.CustomSpinnerView
                            android:id="@+id/fragment_create_subscription_reminder"
                            style="@style/CreateSubForm.Row.EditText" />
                    </LinearLayout>

                    <LinearLayout style="@style/CreateSubForm.Row">

                        <TextView
                            style="@style/CreateSubForm.Row.Label"
                            android:text="@string/currency" />

                        <com.riteshakya.subs.views.component.CustomSpinnerView
                            android:id="@+id/fragment_create_subscription_currency"
                            style="@style/CreateSubForm.Row.EditText" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>
